# Copia-ur_rtde

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  dashboard_client.cpp  dashboard_client.h  robot_state.h  rtde.cpp  rtde.h  rtde_client.cpp  rtde_control_interface.cpp  rtde_control_interface.h  rtde_receive_client.cpp  rtde_send_client.cpp  rtde_utility.h  script_client.cpp  setup.py
ci/: build-wheels.sh  power-and-brake-release.sh  power_and_brake_release.py
cmake/: pybind11Config.cmake  ur_rtdeBuildConfig.cmake.in  ur_rtdeConfig.cmake
debian/: changelog  control  howToSetup.md  librtde-dev.install  ur_rtde_build.sh
doc/: CMakeLists.txt  conf.py.in  doxyfile.in  index.rst
doc/_static/: gripper_2f85.py
doc/api/: api.rst
doc/examples/: examples.rst
doc/faq/: faq.rst
doc/guides/: guides.rst
doc/installation/: installation.rst
doc/introduction/: introduction.rst
examples/cpp/: CMakeLists.txt  forcemode_example.cpp  move_path_async_example.cpp  robotiq_gripper_example.cpp
examples/py/: forcemode_example.py  io_example.py  move_async_example.py  movej_path_with_blend_example.py  scripttest.py  servoj_example.py
include/: dashboard_client.h  robot_state.h  rtde.h  rtde_control_interface.h  rtde_control_script.h  rtde_receive_interface.h  rtde_utility.h  script_client.h
include/ur_rtde/: dashboard_client.h  dashboard_enums.h  mkdoc.py  robot_state.h  robotiq_gripper.h  rtde.h  rtde_control_interface.h  rtde_control_interface_doc.h  rtde_control_script.h  rtde_io_interface.h  rtde_io_interface_doc.h  rtde_receive_interface.h  rtde_receive_interface_doc.h  rtde_utility.h  script_client.h
scripts/: rtde_control.script
src/: dashboard_client.cpp  robot_state.cpp  robotiq_gripper.cpp  rtde.cpp  rtde_control_interface.cpp  rtde_io_client.cpp  rtde_io_interface.cpp  rtde_python_bindings.cpp  rtde_receive_client.cpp  rtde_receive_interface.cpp  rtde_send_client.cpp  script_client.cpp
test/: CMakeLists.txt  main.cpp
